add_executable(test001 test001.cpp)
target_link_libraries(test001 ${PROJECT_NAME})
add_test(NAME test001 COMMAND test001)

add_executable(test002 test002.cpp)
target_link_libraries(test002 ${PROJECT_NAME})
add_test(NAME test002 COMMAND test002)

add_executable(test003 test003.cpp)
target_link_libraries(test003 ${PROJECT_NAME})
add_test(NAME test003 COMMAND test003)

add_executable(test004 test004.cpp)
target_link_libraries(test004 ${PROJECT_NAME})
add_test(NAME test004 COMMAND test004)

add_executable(test005 test005.cpp)
target_link_libraries(test005 ${PROJECT_NAME})
add_test(NAME test005 COMMAND test005)

add_executable(test006 test006.cpp)
target_link_libraries(test006 ${PROJECT_NAME})
add_test(NAME test006 COMMAND test006)

add_executable(test007 test007.cpp)
target_link_libraries(test007 ${PROJECT_NAME})
add_test(NAME test007 COMMAND test007)

add_executable(test008 test008.cpp)
target_link_libraries(test008 ${PROJECT_NAME})
add_test(NAME test008 COMMAND test008)

add_executable(test009 test009.cpp)
target_link_libraries(test009 ${PROJECT_NAME})
add_test(NAME test009 COMMAND test009)

add_executable(test010 test010.cpp)
target_link_libraries(test010 ${PROJECT_NAME})
add_test(NAME test010 COMMAND test010)

add_executable(test011 test011.cpp)
target_link_libraries(test011 ${PROJECT_NAME})
add_test(NAME test011 COMMAND test011)

add_executable(test012 test012.cpp)
target_link_libraries(test012 ${PROJECT_NAME})
add_test(NAME test012 COMMAND test012)

add_executable(test013 test013.cpp)
target_link_libraries(test013 ${PROJECT_NAME})
add_test(NAME test013 COMMAND test013)

add_executable(test014 test014.cpp)
target_link_libraries(test014 ${PROJECT_NAME})
add_test(NAME test014 COMMAND test014)

add_executable(test015 test015.cpp)
target_link_libraries(test015 ${PROJECT_NAME})
add_test(NAME test015 COMMAND test015)

add_executable(test016 test016.cpp)
target_link_libraries(test016 ${PROJECT_NAME})
add_test(NAME test016 COMMAND test016)

add_executable(test017 test017.cpp)
target_link_libraries(test017 ${PROJECT_NAME})
add_test(NAME test017 COMMAND test017)

add_executable(test018 test018.cpp)
target_link_libraries(test018 ${PROJECT_NAME})
add_test(NAME test018 COMMAND test018)

add_executable(test019 test019.cpp)
target_link_libraries(test019 ${PROJECT_NAME})
add_test(NAME test019 COMMAND test019)

add_executable(test020 test020.cpp)
target_link_libraries(test020 ${PROJECT_NAME})
add_test(NAME test020 COMMAND test020)

add_executable(test021 test021.cpp)
target_link_libraries(test021 ${PROJECT_NAME})
add_test(NAME test021 COMMAND test021)

add_executable(test022 test022.cpp)
target_link_libraries(test022 ${PROJECT_NAME})
add_test(NAME test022 COMMAND test022)

add_executable(test023 test023.cpp)
target_link_libraries(test023 ${PROJECT_NAME})
add_test(NAME test023 COMMAND test023)

add_executable(test024 test024.cpp)
target_link_libraries(test024 ${PROJECT_NAME})
add_test(NAME test024 COMMAND test024)

add_executable(test025 test025.cpp)
target_link_libraries(test025 ${PROJECT_NAME})
add_test(NAME test025 COMMAND test025)

add_executable(test026 test026.cpp)
target_link_libraries(test026 ${PROJECT_NAME})
add_test(NAME test026 COMMAND test026)

add_executable(test027 test027.cpp)
target_link_libraries(test027 ${PROJECT_NAME})
add_test(NAME test027 COMMAND test027)

add_executable(test028 test028.cpp)
target_link_libraries(test028 ${PROJECT_NAME})
add_test(NAME test028 COMMAND test028)

add_executable(test029 test029.cpp)
target_link_libraries(test029 ${PROJECT_NAME})
add_test(NAME test029 COMMAND test029)

add_executable(test030 test030.cpp)
target_link_libraries(test030 ${PROJECT_NAME})
add_test(NAME test030 COMMAND test030)

add_executable(test031 test031.cpp)
target_link_libraries(test031 ${PROJECT_NAME})
add_test(NAME test031 COMMAND test031)

add_executable(test032 test032.cpp)
target_link_libraries(test032 ${PROJECT_NAME})
add_test(NAME test032 COMMAND test032)

add_executable(test033 test033.cpp)
target_link_libraries(test033 ${PROJECT_NAME})
add_test(NAME test033 COMMAND test033)

add_executable(test034 test034.cpp)
target_link_libraries(test034 ${PROJECT_NAME})
add_test(NAME test034 COMMAND test034)

add_executable(test035 test035.cpp)
target_link_libraries(test035 ${PROJECT_NAME})
add_test(NAME test035 COMMAND test035)

add_executable(test036 test036.cpp)
target_link_libraries(test036 ${PROJECT_NAME})
add_test(NAME test036 COMMAND test036)

add_executable(test037 test037.cpp)
target_link_libraries(test037 ${PROJECT_NAME})
add_test(NAME test037 COMMAND test037)

add_executable(test038 test038.cpp)
target_link_libraries(test038 ${PROJECT_NAME})
add_test(NAME test038 COMMAND test038)

add_executable(test039 test039.cpp)
target_link_libraries(test039 ${PROJECT_NAME})
add_test(NAME test039 COMMAND test039)

add_executable(test040 test040.cpp test040b.cpp)
target_link_libraries(test040 ${PROJECT_NAME})
add_test(NAME test040 COMMAND test040)

add_executable(test041 test041.cpp)
target_link_libraries(test041 ${PROJECT_NAME})
add_test(NAME test041 COMMAND test041)

add_executable(test042 test042.cpp)
target_link_libraries(test042 ${PROJECT_NAME})
add_test(NAME test042 COMMAND test042)

add_executable(test043 test043.cpp)
target_link_libraries(test043 ${PROJECT_NAME})
add_test(NAME test043 COMMAND test043)

add_executable(test044 test044.cpp)
target_link_libraries(test044 ${PROJECT_NAME})
add_test(NAME test044 COMMAND test044)
