macro(createMyTest TESTNAME)
    add_executable("${TESTNAME}" "${TESTNAME}.cpp")
    target_link_libraries("${TESTNAME}" ${PROJECT_NAME})
    add_test(NAME "${TESTNAME}" COMMAND "${TESTNAME}")
endmacro()

createMyTest(test001)
createMyTest(test002)
createMyTest(test003)
createMyTest(test004)
createMyTest(test005)
createMyTest(test006)
createMyTest(test007)
createMyTest(test008)
createMyTest(test009)
createMyTest(test010)
createMyTest(test011)
createMyTest(test012)
createMyTest(test013)
createMyTest(test014)
createMyTest(test015)
createMyTest(test016)
createMyTest(test017)
createMyTest(test018)
createMyTest(test019)
createMyTest(test020)
createMyTest(test021)
createMyTest(test022)
createMyTest(test023)
createMyTest(test024)
createMyTest(test025)
createMyTest(test026)
createMyTest(test027)
createMyTest(test028)
createMyTest(test029)
createMyTest(test030)
createMyTest(test031)
createMyTest(test032)
createMyTest(test033)
createMyTest(test034)
createMyTest(test035)
createMyTest(test036)
createMyTest(test037)
createMyTest(test038)
createMyTest(test039)
createMyTest(test040)
createMyTest(test040b)
createMyTest(test041)
createMyTest(test042)
createMyTest(test043)
createMyTest(test044)
