macro(create_test TESTNAME)
    set(__additional_src "${ARGN}")
    list(INSERT __additional_src 0 "${TESTNAME}.cpp")
    list(REMOVE_DUPLICATES  __additional_src)

    add_executable("${TESTNAME}" "${__additional_src}")
    target_link_libraries("${TESTNAME}" ${PROJECT_NAME})
    add_test(NAME "${TESTNAME}" COMMAND "${TESTNAME}")

    unset(__additional_src)
endmacro(create_test)

create_test(test001)
create_test(test002)
create_test(test003)
create_test(test004)
create_test(test005)
create_test(test006)
create_test(test007)
create_test(test008)
create_test(test009)
create_test(test010)
create_test(test011)
create_test(test012)
create_test(test013)
create_test(test014)
create_test(test015)
create_test(test016)
create_test(test017)
create_test(test018)
create_test(test019)
create_test(test020)
create_test(test021)
create_test(test022)
create_test(test023)
create_test(test024)
create_test(test025)
create_test(test026)
create_test(test027)
create_test(test028)
create_test(test029)
create_test(test030)
create_test(test031)
create_test(test032)
create_test(test033)
create_test(test034)
create_test(test035)
create_test(test036)
create_test(test037)
create_test(test038)
create_test(test039)
create_test(test040 test040b.cpp)
create_test(test041)
create_test(test042)
create_test(test043)
create_test(test044)
